<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:id="@+id/scan_fragment"
    tools:context="idk14.pfi3_finalproject_group1.Help.ScanFragment">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:id="@+id/imageView3"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:src= "@drawable/logonew" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_codes"
        android:textColor="#1a5b0c"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/scan_description"
        android:textColor="#1a5b0c"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/textView"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginRight="20dp"
        android:id="@+id/scan"
        android:src="@drawable/scanitem2"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/End"
        android:layout_gravity="center"
        android:id="@+id/button4"
        android:layout_marginTop="50dp" />

</LinearLayout>
