<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/qr_fragment"
    android:animateLayoutChanges="true"
    tools:context="idk14.pfi3_finalproject_group1.Help.QrFragment">

    <!--   android:background="#ffdee5da".-->

    <ImageView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:id="@+id/imageView3"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:layout_marginRight="20dp"
        android:src= "@drawable/logonew" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_qr_codes"
        android:textColor="#1a5b0c"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/qr_description"
        android:textColor="#1a5b0c"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />


    <ImageView
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:id="@+id/scan"
        android:scaleType="fitCenter"
        android:src="@drawable/scanitem2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ActivCodes"
        android:layout_gravity="center"
        android:id="@+id/button3"
        android:textColor="#fff"
        android:background="#ffffc814"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp" />

</LinearLayout>
